# aiverify-developer-tools

./: .gitignore  404.html  CONTRIBUTING.md  Contributor.md  NOTICE.md  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/: AUTHORS.rst  CHANGELOG.md  INSTRUCTIONS.md  README.md  __main__.py  output.schema.json  pyproject.toml  {{cookiecutter.project_slug}}.meta.json  {{cookiecutter.project_slug}}.py
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/templates/licenses/: GPL-3  MIT
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/templates/plugin_types/: algo_init  algorithm  plugin_init
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/templates/tests/: test_algo_regression
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/tests/: plugin_test.py
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/tests/unit_tests/: test_algo.py
ai-verify-algorithm-template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: algo.meta.json  algo_init.py  input.schema.json
aiverify-algorithm-template/{{cookiecutter.project_slug}}/: .gitignore  LICENSE  plugin.meta.json  pyproject.toml  run_tests.sh
aiverify-algorithm-template/{{cookiecutter.project_slug}}/templates/licenses/: Apache-2  BSD-3  MPL-2
aiverify-algorithm-template/{{cookiecutter.project_slug}}/templates/plugin_types/: algo  algo_init
aiverify-algorithm-template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  algo.meta.json  algo.py  plugin_init.py
(+260 files in other folders)
